fix(material/card): don't add extra padding around mat-card-title-group
The card demo page forgot to include mat-card-header which caused many
of the cards to look strange. At some point it looks like padding was
added to mat-card-title-group to compensate in some cases. This PR
removes that padding and adds the missing mat-card-header blocks
instead.

--- a/src/material/card/card.scss
+++ b/src/material/card/card.scss
@@ -81,10 +81,7 @@ $mat-card-default-padding: 16px !default;
   // and subtitle go first (projected into a single div), followed by the media.
   display: flex;
   justify-content: space-between;
-
-  // Apply default padding for the title-group region. Omit any bottom padding because we assume
-  // this region will be followed by another region that includes top padding.
-  padding: $mat-card-default-padding $mat-card-default-padding 0;
+  width: 100%;
 }
 
 // Avatar image for a card. MDC does not specifically have a card avatar or a "common" avatar.
